--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="courses.html">Courses</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="https://www.programiz.com/c-programming/online-compiler/" target="_blank">Online Laboratory</a></li>
-          <li><a href="#">Tests/Examinations</a></li>
+          <li><a href="tests.html">Tests/Examinations</a></li>
           <li><a href="signup.html">Sign Up</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
